--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "auto-close-tag.enableAutoCloseTag": false,
   "auto-close-tag.enableAutoCloseSelfClosingTag": false,
-  "typescript.autoClosingTags": false
+  "typescript.autoClosingTags": false,
+  "editor.formatOnSave": true
 }
